adição do readme

--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <div>
-          <h2>Buscar localização.</h2>
+          <h2>Buscar minha localização.</h2>
           <div class="form-group">
             <label class="form-label" for="lat">latitude</label>
             <input class="form-control" type="text" name="" id="self-lat" />
